"updated getting started and intro slides"

--- a/intro_to_R.html
+++ b/intro_to_R.html
@@ -301,13 +301,13 @@ class: center, middle, inverse, title-slide
 
 ## Other benefits of R
 
-- [Open source 😃](https://en.wikipedia.org/wiki/Open_source)
+- [Open source 📖](https://en.wikipedia.org/wiki/Open_source)
 
 - [Free 🆓](https://www.gnu.org/philosophy/free-sw.html)
 
 - [Strong R community/support 👪](https://community.rstudio.com/)
 
-- [Reproducible 👨‍🔬](https://www.annualreviews.org/doi/10.1146/annurev-publhealth-012420-105110?url_ver=Z39.88-2003&amp;rfr_id=ori%3Arid%3Acrossref.org&amp;rfr_dat=cr_pub++0pubmed)
+- [Reproducible 👩‍🔬](https://www.annualreviews.org/doi/10.1146/annurev-publhealth-012420-105110?url_ver=Z39.88-2003&amp;rfr_id=ori%3Arid%3Acrossref.org&amp;rfr_dat=cr_pub++0pubmed)
 
 - Broad 📚
 ---
