presentation day update

--- a/communicate_next_steps.html
+++ b/communicate_next_steps.html
@@ -27,26 +27,27 @@ class: center, middle, inverse, title-slide
 
 
 
-## Recap of previous sessions
+class: inverse, center, hide-logo, title
+background-image: url(imgs/title.png)
+background-size: cover
 
-.left-column[
+## &lt;span style='font-family:Arial; color: black; font-weight:400;'&gt;Right Start Programming with R language&lt;/span&gt;
 
-- Most of your data will be tabular data
+### Part III: Communicate your results, learn more
 
-- Specialized packages exist that support different analytic steps
+.left[
 
-- Often, statistical summaries and visualizations will be required during analysis
+&lt;span style="font-weight: 600; font-size: 28px;"&gt;Bilikisu Aderinto&lt;/span&gt;
 
-]
+&lt;span style="font-weight: 600; font-size: 28px;"&gt;Stephen Balogun&lt;/span&gt;
 
-.right-column[
+&lt;span class="my_date"&gt;Sat, January 29 2022&lt;/span&gt;
 
-&lt;img src="./imgs/recap.jpg" width="704" /&gt;
 ]
 
 ---
 
-## Session outline
+## Outline
 
 1. Saving outputs
 
@@ -58,9 +59,7 @@ class: center, middle, inverse, title-slide
 
 ## Saving outputs
 
-Several ways exist.
-
-- Tables: Use the `export()` from the {rio} package
+Several ways exists
 
     - for csv
     
@@ -84,7 +83,7 @@ Several ways exist.
 
 - Articles
 
-- Abstracts
+- websites
 
 ---
 
@@ -151,7 +150,7 @@ Several ways exist.
 ]
 
 ---
-class: inverse, middle, center
+class: inverse, middle, center, hide-logo
 background-image: url(https://upload.wikimedia.org/wikipedia/commons/3/39/Naruto_Shiki_Fujin.svg)
 background-size: contain
 
