processed for sharing

--- a/getting_started.html
+++ b/getting_started.html
@@ -246,7 +246,7 @@ background-image: url(imgs/LOGO.jfif)
 
 .pull-left[
 
-- [Open source 📖](https://en.wikipedia.org/wiki/Open_source)
+- [Open source 😺](https://en.wikipedia.org/wiki/Open_source)
 
 - [Free 🆓](https://www.gnu.org/philosophy/free-sw.html)
 
